# dig-node

./: .gitignore  BACKERS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md  USER_JOURNEY.md  build.rs  package.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: backers-sync.yml  build-binaries.yml  ci.yml  nightly-release.yml  package.yml  release.yml  service-smoke.yml
.loop/: adopt-dig-tls-nodecert.md
crates/dig-node/: Cargo.toml  SPEC.md
crates/dig-node-core/: Cargo.toml  SPEC.md
crates/dig-node-core/src/: address_book.rs  bandwidth.rs  chainwatch.rs  content_serve.rs  dht.rs  download.rs  lib.rs  net.rs  peer.rs  pex.rs  session.rs  subscription.rs  verification_ledger.rs
crates/dig-node-core/src/seams/: mod.rs
crates/dig-node-core/src/seams/capsule/: capsule_store.rs  mod.rs
crates/dig-node-core/src/seams/chia_peer/: coinset_resolver.rs  light_client.rs  mod.rs
crates/dig-node-core/src/seams/content/: bandwidth.rs  content_serve.rs  mod.rs
crates/dig-node-core/src/seams/dig_peer/: capsule_fallback.rs  dht.rs  mod.rs  net.rs  peer_network.rs  selector_adapter.rs  session.rs  union_locator.rs
crates/dig-node-core/src/seams/dig_rpc/: dispatch.rs  mod.rs
crates/dig-node-core/src/seams/key_mgmt/: key_manager.rs  mod.rs
crates/dig-node-core/src/shared/: chain_view.rs  content.rs  identity.rs  mod.rs
crates/dig-node-core/tests/: dht_integration.rs  peer_network.rs  pool_connect.rs
crates/dig-node-service/: Cargo.toml
crates/dig-node-service/src/: cli.rs  config.rs  content.rs  control.rs  control_cli.rs  control_client.rs  entrypoint.rs  hosts.rs  lib.rs  logging.rs  main.rs  meta.rs  open.rs  pair.rs  pairing.rs  peers.rs  rpc.rs  security.rs  self_heal.rs  server.rs  service.rs  state.rs  tls.rs  updater.rs  wallet_authz.rs  win_service.rs
crates/dig-node-service/tests/: beacon_cli_process.rs  cli.rs  cli_dign_alias.rs  content_serve.rs  https_serve.rs  live_funds_tip_e2e.rs  never_log.rs  nightly_release_workflow_shape.rs  openrpc_drift_guard.rs  release_workflow_dign_guard.rs  server.rs
crates/dig-node-service/tests/fixtures/: fake_beacon_cli.rs
crates/dig-node/src/: dht.rs  peer.rs
crates/dig-node/tests/: dht_integration.rs
crates/dig-runtime/: Cargo.toml
crates/dig-runtime/src/: lib.rs
crates/dig-wallet/: Cargo.toml
crates/dig-wallet/src/: lib.rs  seed_store.rs
crates/dig-wallet/src/sage/: actions.rs  auth.rs  custody.rs  db.rs  events.rs  fallback.rs  mint.rs  mod.rs  network.rs  offers.rs  options.rs  routing.rs  rpc.rs  service.rs  singleton.rs  spend.rs  sync.rs  themes.rs  tipping.rs  transport.rs  types.rs
crates/dig-wallet/tests/: conformance.rs
crates/dig-wallet/tests/vectors/: sage-openapi-v0.12.11.json
node/: package.json
node/src/: dig-client.js  node.js  rpc.js
node/test/: rpc-integration.test.js  server.test.js  unit.test.js
packaging/linux/: build-deb.sh  dig-node.desktop
packaging/linux/systemd/: net.dignetwork.dig-node.service
packaging/macos/: build-pkg.sh  dig-url-handler.applescript  net.dignetwork.dig-node.plist
packaging/macos/scripts/: postinstall  preinstall
packaging/windows/: dig-node.wxs
runbooks/: live-funds-tip-e2e.md  release.md
src/: cache.js  cli.rs  config.rs  control.rs  lib.rs  main.rs  meta.rs  rpc.rs  server.js  server.rs  service.rs  urn.js  win_service.rs
test/: wasm.test.js
tests/: cli.rs  openrpc_drift_guard.rs  server.rs
