[workspace]
resolver = "2"
# The canonical dig-node repo is a small workspace of the node ENGINE + its two
# DIG-Browser host shells:
#   * dig-node-core     — the NODE engine library (crate `dig_node_core`): RPC dispatch,
#                         serve/fetch/redirect, chain-watch, subscriptions, gap-fill,
#                         cache, P2P. The single node implementation shared by BOTH host
#                         shells below. (Renamed from `dig-node` so the engine library and
#                         the produced `dig-node` binary no longer share a name, #216.)
#   * dig-node-service  — the OS-service binary (`dig-node`): axum transport + control
#                         plane + CLI + service install. Depends on the engine library.
#   * dig-runtime       — the DIG Browser's in-process node: a cdylib (`dig_runtime.dll`)
#                         exposing the `dig_rpc`/`dig_wallet_rpc` C-ABI the browser links.
#   * dig-wallet        — the DIG Browser's built-in Chia wallet host (loopback UI + BLS
#                         signing), brought up by dig-runtime beside the node.
# For the `.dig` STORE FORMAT the node depends on digstore's store-format LIBRARY crates
# (digstore-core/-crypto/-chain/-host/-remote/-stage) as GIT dependencies — dig-node-core
# -> store-lib, never the reverse. digstore is only ever an RPC client of a node.
members = [
    "crates/dig-node-core",
    "crates/dig-node-service",
    "crates/dig-runtime",
    "crates/dig-wallet",
]

[workspace.package]
edition = "2021"
# The RELEASE version of the repo's shipped artifact — the `dig-node` binary
# (`dig-node-service`, which inherits this via `version.workspace = true`). This is
# the version the tag-on-merge + version-increment CI reads from the ROOT manifest
# (`[workspace.package].version`), so it MUST be set here for a release to fire
# (§3.6). The library crates (dig-node-core/dig-runtime/dig-wallet) keep their own
# independent versions — only the released binary tracks the workspace version.
version = "0.9.0"

# Release hardening, matching digstore: keep integer-overflow checks ON in release.
# The node parses untrusted serialized input and does offset/length arithmetic over
# it, so silent wrapping in release would turn a length bug into a memory/logic hazard.
[profile.release]
overflow-checks = true

# -- dig-gossip vendored-fork patches (L7 peer network) -----------------------------------------------
#
# The node's P2P stack (dig-nat/dig-gossip/dig-dht/dig-pex/dig-download/dig-peer-selector) builds against
# ADDITIVE forks of `chia-protocol` + `chia-sdk-client` that dig-gossip vendors: the DIG introducer
# opcodes `RegisterPeer=218`/`RegisterAck=219` on `ProtocolMessageTypes`, plus `Peer::send_protocol_message`
# + `RateLimits.dig_wire`. Those forks are the SAME upstream versions (`chia-protocol` 0.26,
# `chia-sdk-client` 0.28) with additive DIG extensions, so patching the whole workspace to them is safe
# for the store-format crates too (they simply gain unused enum variants).
#
# dig-gossip's own `[patch.crates-io]` does NOT apply transitively when it is a git DEPENDENCY (cargo
# applies patches only from the ROOT manifest being built), so this workspace re-declares them, resolving
# the vendored packages from the SAME pinned dig-gossip git rev — CI-safe when the repo is checked out
# standalone. `native-tls` is NOT patched: dig-gossip is pulled with
# `default-features = false, features = ["rustls", "relay"]`, so the OpenSSL/native-tls path is off.
[patch.crates-io]
chia-protocol = { git = "https://github.com/DIG-Network/dig-gossip", rev = "ad20521335149dfa8687bf893620a87ba04fb30a" }
chia-sdk-client = { git = "https://github.com/DIG-Network/dig-gossip", rev = "ad20521335149dfa8687bf893620a87ba04fb30a" }
