[package]
name = "dig-node-core"
version = "0.17.0"
edition = "2021"
license = "GPL-2.0-only"
description = "The canonical DIG node ENGINE library (crate `dig_node_core`): the JSON-RPC dispatch (`handle_rpc`, the same contract as rpc.dig.net), local-first content serve/fetch/redirect from LOCAL .dig store modules (via digstore_host::serve_blind), chain-anchored-root resolution, chain-watch + subscriptions + generation gap-fill, the LRU cache, and the full P2P stack. Shared UNCHANGED by both host shells: the `dig-node` OS-service binary (dig-node-service) and the DIG Browser's in-process cdylib (dig-runtime). Native Rust so the compiled-module serve path works."

[lib]
name = "dig_node_core"
path = "src/lib.rs"

[dependencies]
# The `.dig` STORE-FORMAT LIBRARY crates. These live in the digstore repo (the store
# CLI + format/read libraries) and are consumed here as GIT dependencies: the node
# depends on the store libs, NEVER the reverse (digstore is only ever an RPC client of
# a node). Pinned to a single digstore rev so the whole store-format surface the node
# reads/verifies/decrypts against is one coherent version. Bump all seven together.
#
# digstore-host     — instantiate a compiled module + `serve_blind` (ciphertext + proof).
# digstore-core     — wire types (ContentResponse), codec, Bytes32/48, the PublicManifest
#                     type + `datasection::read_public_manifest` (#176 Phase C).
# digstore-remote   — the §21 remote client + persistent identity signer (§21.9).
# digstore-chain    — CHIP-0035 singleton lineage walk (chain-anchored root).
# digstore-stage    — the shared stage→compile engine for the `dig.stage` RPC (turn a
#                     folder into a capsule in-process, #95 Pass C). Its build script
#                     embeds the guest wasm (BINDING contract D6) via the DIGSTORE_GUEST_WASM
#                     override this repo sets in .cargo/config.toml (see vendor/).
# digstore-crypto   — read-path crypto primitives.
# digstore-compiler — `extract_data_section_blob` (#176 Phase C): pulls the embedded DIGS
#                     data-section blob out of a compiled `.dig` module's wasm binary so
#                     `dig.getManifest` can read section 13 (the PublicManifest) WITHOUT a
#                     wasmtime instantiation (the manifest is PUBLIC, unencrypted data — no
#                     `serve_blind` decrypt needed). Already a transitive dependency via
#                     digstore-stage; pinned directly at the SAME rev so its public API is
#                     usable here too.
#
# Bumped to a rev past digstore's "Add normalized public manifest to the .dig format"
# commit (08f5d39) so `PublicManifest`/`read_public_manifest`/`extract_data_section_blob`
# exist.
#
# Bumped again to 4c34f0be (digstore v0.19.2, fix #1473) to adopt the HARDENED,
# unforgeable `digstore_chain::singleton::verify_pinned_root`. The prior rev (d5e52fb)
# anchored store identity on the attacker-controllable curried `SingletonStruct.launcher_id`,
# so a forged singleton currying `launcher_id == store_id` (hinted to store_id) could pass as
# chain-verified. 4c34f0be anchors identity on the UNFORGEABLE launcher coin (`coin_id ==
# store_id`) via a bounded backward `parent_coin_info` walk, making the read-root anti-rollback
# check (#747/#841/#852-node) SOUND. The public signature is unchanged (a pure rev bump). Bump
# all seven together.
digstore-host = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-core = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-remote = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-chain = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-stage = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-crypto = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
digstore-compiler = { git = "https://github.com/DIG-Network/digstore.git", rev = "4c34f0be" }
chia-protocol = "0.26"
# -- Seam 1: Chia light-client CONFIRMATION/PEAK observability (#1314) --------------------------------
# `chia-peer` is a subscribing Chia wallet-protocol light client (a thin driver over chia-wallet-sdk
# 0.30 / chia-protocol 0.26): it tracks the peak + coin/puzzle-hash confirmations for the coins the
# node SUBSCRIBES to (DataStore singletons, collateral, treasury/tip) and submits spend bundles. Its
# read side is a `dig-chainsource-interface` `ChainSourceProvider` the node registers into
# `chia-query`'s aggregating `ProviderRegistry` at priority 20 (DI). This is DISTINCT from the
# content-root path: DataStore content-root resolution STAYS on the coinset `sync_datastore` walk
# (`CoinsetResolver`, seam 1's `AnchoredRootResolver`), UNCHANGED. The light client deliberately
# returns `Unsupported` for singleton-lineage + block-timestamp reads, which fall through to
# chia-query's coinset provider. All three crates share chia-protocol 0.26 + dig-chainsource-interface
# 0.1, so their types unify with the workspace (crates.io, never git).
chia-peer = "0.1"
dig-chainsource-interface = "0.1"
chia-query = "0.5"
# The ecosystem's canonical address-family / IPv6-first primitive (CLAUDE.md §5.2). The advertise
# path keys + orders candidate addresses via `dig_ip::Family` and aggregates them source-tagged +
# de-duplicated via `dig_ip::PeerCandidates` — never a hand-rolled family sort (epic #1020, #1032).
# A leaf crate (no transitive DIG deps), so the crates.io release is used directly.
dig-ip = "0.1"
# The canonical dig-app ⇄ dig-node IPC session/signing contract (engine role-half + wire types +
# domain builders + frame bounds). SSOT shared with dig-app so the two halves can never drift (#1080).
dig-ipc-protocol = "0.2"
# On-chain DID resolution (WU3, #778): the honest chain-authenticated read path the production
# DidSigningKeyResolver delegates to. Not on crates.io — consumed via git tag (same pattern as dig-app).
dig-identity = { git = "https://github.com/DIG-Network/dig-identity", tag = "v0.4.0" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "time", "signal"] }
# Object-safe async trait for the injectable anchored-root resolver (the
# mandatory read-path chain pin, #127): production walks coinset, tests inject a
# deterministic resolver.
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The canonical node<->node JSON-RPC contract: the Method catalogue (wire names +
# per-method tier) and the mTLS peer-reachability allowlist. dig-node-core reads its
# method names + the peer allowlist from HERE (never hand-rolled) so the contract
# cannot drift from the other node implementation or the discovery document (#1075).
dig-rpc-protocol = "0.3"
base64 = "0.22"
hex = "0.4"
filetime = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
fs4 = { version = "1.1.0", features = ["sync"] }
directories = "6.0.0"
# OS CSPRNG for the per-stage content-authoring BLS key (#95 Pass C dig.stage).
getrandom = "0.2"
# -- L7 DIG Node peer network (PHASE-2b, #162) -------------------------------------------------------
# The NAT-traversal + connected-peer-pool layer. The bespoke in-node relay client (formerly relay.rs)
# is RETIRED: the relay connection now lives inside dig-nat (the `connect()` ladder's last-resort tier
# + the persistent reservation) and dig-gossip (the introducer-backed connected peer pool). dig-node
# consumes both to auto-discover peers via relay.dig.net, maintain a pool, and serve/issue the L7 peer
# RPC over mTLS (peer_id = SHA256(TLS SPKI DER)).
#
# Sourcing (#1280/#1393/#1494 crates.io cascade): dig-nat 0.11 is on crates.io — the whole peer stack
# (dig-gossip 0.15.0, dig-dht 0.5.1, dig-download 0.7.1, dig-peer-selector 0.5.2) now depends on dig-nat
# ">=0.10, <0.12" from crates.io, so consuming it here as a plain crates.io version unifies the ENTIRE
# graph on ONE dig-nat 0.11 instance (the old bare-git unification patch is retired). 0.11 adds the
# relayed RESPONDER path — `RelayStatus::enable_accept` surfaces an introduced circuit as a
# `RelayTunnel`, and `RelayAcceptor` runs the mTLS SERVER half over it (#1536, Leg B) — on top of
# 0.10's SPKI-pinned dialer (#1422) and the STUN happy-eyeballs reflexive discovery, and auto-composes
# the FULL NAT ladder via `connect_with_runtime` + `NatRuntime`, taking a CA-signed NodeCert.
dig-nat = "0.11"
# dig-gossip is the ONE peer-stack exception: at v0.15.0 (on dig-nat 0.11 + dig-tls 0.3, crates.io
# deps) but NOT yet published to crates.io — its own publish is guarded pending dig-peer-protocol (#681).
# So it stays a git dependency, PINNED to the v0.15.0 tag commit (rev 90c12ac5a89a, #1541 — injects the
# node's PERSISTENT `nat_identity` NodeCert into the dig-nat transport so every transport presents the
# ONE advertised peer_id, on top of #1517's relay-circuit auto-dial). Pulled rustls-only (no
# native-tls). Its dig-nat/dig-tls/dig-constants come from crates.io (same versions as here), so the
# graph still unifies to ONE of each. The vendored chia-protocol/chia-sdk-client forks it path-patches
# are re-declared at this SAME rev in the workspace `[patch.crates-io]` (a git dep's own patches do not
# apply transitively — the #1529 3-rev lockstep: this dep rev + the two patch revs move together).
dig-gossip = { git = "https://github.com/DIG-Network/dig-gossip", rev = "90c12ac5a89a4d143ed86cc755cd42678aa1aa4f", default-features = false, features = ["rustls", "relay"] }
# The canonical DIG network id (genesis challenge) for the gossip handshake / introducer scope. From
# crates.io: dig-nat 0.7 requires `>=0.4, <0.6` and dig-gossip 0.7.1 requires `>=0.2, <0.5`, so `0.4`
# sits in both windows and the whole graph resolves to ONE crates.io dig-constants 0.4.x.
dig-constants = "0.4"
# -- L7 content-location DHT (PHASE-B, #163) ---------------------------------------------------------
# The Kademlia DHT that maps DIG content (store / capsule / root / resource) to the peer_ids holding
# it. The node LOCATES content it lacks via `find_providers`, and keeps its OWN held-inventory provider
# records CURRENT in the DHT (`announce_provider` / `withdraw_provider` / `republish`). It rides the
# SAME dig-nat mTLS transport as the rest of the peer network via a `DhtTransport` adapter (`dht.rs`).
#
# Sourcing: the crates.io release (NC-7: prefer the published version over bare-git now that dig-dht
# is on crates.io). dig-download + dig-peer-selector below ALSO resolve dig-dht from crates.io "^0.5",
# so cargo unifies to ONE dig-dht instance — dig-dht's `PeerId` / `Contact` / `DhtTransport` share the
# exact types `dig_nat::connect` returns. dig-dht 0.5 deps dig-nat "^0.10" (crates.io), the SAME
# dig-nat "0.10" this crate pins, so the whole graph shares ONE dig-nat 0.10 instance.
dig-dht = "0.5"
# -- L7 Peer Exchange (PEX, #166) --------------------------------------------------------------------
# The node<->node peer-sharing protocol: over each established mTLS peer connection, a dedicated PEX
# logical stream exchanges delta-based first-hand known-peer sets (handshake -> snapshot -> deltas),
# feeding discovered peers into the pool as dial candidates (hints, verified by dialing) and formalizing
# what the ad-hoc `dig.getPeers` polling did. dig-pex ships a transport-agnostic sans-IO `PexEngine`
# this crate embeds; `pex.rs` is the dig-nat mux I/O adapter (SPEC §10.1, Appendix A).
#
# Sourcing: bare git form (no `rev`, like dig-nat/dig-dht) so cargo unifies any shared transitive deps
# to ONE copy across the graph; resolved to the tracked rev via the lockfile. dig-pex keeps a minimal
# dependency surface (serde/serde_json/tokio/rand — it mirrors the address shape rather than importing
# the transport crates), so there is no cross-crate type-unification concern here.
dig-pex = "0.1"
# -- Multi-source content fetch (#164) + redirect-on-miss (#165) --------------------------------------
# The node-side download orchestrator: locate holders via dig-dht `find_providers`, confirm with
# `dig.getAvailability`, fan byte ranges across MULTIPLE providers simultaneously (`dig.fetchRange`
# over dig-nat), verify each range + the whole resource against the chain-anchored root, and
# reassemble — with pause/resume + `.download.tmp` GC. dig-node wires the real seams per the crate's
# implementers' note (see `download.rs`): DhtProviderLocator over our DhtService, NatRangeTransport
# over our mTLS identity, MerkleVerifier bound to the digstore proof format, FileSink/FileStateStore
# under the node's cache dir.
#
# Sourcing: the crates.io release (NC-7), matching dig-dht above. dig-download 0.6 deps dig-dht "^0.5" +
# dig-nat "^0.10" + dig-tls "^0.3" from crates.io, so cargo unifies its dig-dht + dig-nat + dig-tls with
# ours — ONE crate instance each across the graph (its re-exported `ContentId`/`ProviderRecord` ARE our
# dig-dht types). 0.6 keeps the injectable `SourceSelector` seam (dig-node implements it over
# dig-peer-selector, see `seams/dig_peer/selector_adapter.rs`), records range outcomes internally, and the
# fetch leg composes the FULL NAT ladder from an injected shared `NatRuntime` (`NatRangeTransport::new_with_runtime`).
dig-download = "0.7"
# -- Self-optimizing peer selection (#178) ------------------------------------------------------------
# The decision + learning layer between dig-dht discovery and dig-download execution: it ranks the
# providers `find_providers` returns (learning throughput/rtt/reliability + a per-class saturation
# point + an adaptive relayed penalty from the REAL measured outcome of every range) and hands
# dig-download the ranked subset + per-peer concurrency, instead of dig-download picking sources
# blindly. Every completed/failed range streams back via `record_outcome` in real time, and a dropped
# source drives a `rebalance`. dig-node bridges dig-download's `SourceSelector` seam to this crate via
# `seams/dig_peer/selector_adapter.rs` (the @30↔@30 composition-root bridge — dig-download does NOT
# depend on dig-peer-selector; dig-node, one level up, wires them together).
#
# Sourcing: the crates.io release (NC-7), matching dig-dht/dig-download above. It deps dig-dht "^0.5" +
# dig-nat "^0.10" from crates.io, so cargo unifies the selector's `dig-nat` + `dig-dht` with ours — ONE
# crate instance each (its re-used `PeerId`/`ContentId`/`ProviderRecord`/`CandidateAddr` ARE our
# dig-nat/dig-dht types). The selector mirrors `dig_gossip::PoolEvent` LOCALLY (it does not depend on
# dig-gossip, which lags as a git dep), so the node maps `dig_gossip::PoolEvent` → the selector's local
# `PoolEvent` 1:1 (see `download.rs::pool_event_to_selector`).
dig-peer-selector = "0.5"
# The canonical DIG mTLS certificate crate (L00, crates.io). The node's PERSISTENT machine identity
# is a CA-signed `dig_tls::NodeCert` minted from the node's own BLS identity key and persisted 0600 in
# the data dir (#908 identity boundary: this is the MACHINE key, never a user key). Replaces the
# legacy self-signed `rcgen` cert as the node dials/serves over the dig-nat CA-signed mTLS model
# (#1280). `peer_id = SHA256(SPKI DER)` is stable across restarts. dig-tls re-exports chia-bls's
# `SecretKey`, unifying with this crate's chia-bls 0.26.
dig-tls = "0.3"
# The mTLS peer-RPC LISTENER (server side): present the node cert + REQUIRE a client cert (peer_id
# enforced). rustls/tokio-rustls with ring only (no OpenSSL/aws-lc for OUR usage), matching dig-nat.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# IPv6-first, IPv4-fallback (ecosystem HARD RULE): bind the peer-RPC listener on the IPv6 unspecified
# address `[::]` as a DUAL-STACK socket (IPV6_V6ONLY cleared) so ONE socket serves both native IPv6
# and IPv4-mapped peers. Mirrors dig-relay's `net.rs` / dig-gossip's own dual-stack bind.
socket2 = "0.5"
# -- Engine-side identity session (NODE-1, #910) -----------------------------------------------------
# The engine is IDENTITY-AGNOSTIC: it holds NO user signing key. `control.session.attach` proves the
# attaching dig-app holds the profile's slot-0x0010 identity key by VERIFYING an Ed25519 signature over
# the byte-identical `DIGNET-SESSION-v1 ‖ nonce ‖ profile_did` challenge (session.rs). Ed25519
# verification rides `ring` — ALREADY in the locked graph (the rustls/tokio-rustls transport uses it),
# so it adds no new crate. VERIFY-ONLY: the engine never holds a signing key. (dig-app signs with
# ed25519-dalek; ring verifies RFC-8032 signatures + is strict against malleable/small-order inputs.)
ring = "0.17"
tracing = "0.1"
# Best-effort CONCURRENT fan-out of the multi-source provider union (`UnionLocator`, #1443): query
# dig-dht + PEX + relay-introducer sources at once via `future::join_all` (order-preserving, so the
# dedup keeps DHT-first precedence). rustls/tokio already pull futures transitively; declaring it here
# makes it a first-class prod dep of the union seam. Minimal feature set (no executor).
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tempfile = "3"
# Builds canonical `did:chia:` strings for the on-chain DID-resolver tests (matches dig-identity's codec).
chia-sdk-utils = "0.30"
# Derives deterministic test key seeds + nonces (no hard-coded crypto literals — CodeQL flags those).
sha2 = "0.10"
# The session attach tests sign challenges with the BLS12-381 G2 AugScheme (the app's slot-0x0010
# identity key), matching dig-ipc-protocol's signing contract and dig-identity's published G1 key.
chia-bls = "0.26"
# axum is a TEST-ONLY dependency of the engine library: the node no longer serves its
# own HTTP (the `dig-node-service` shell owns the axum transport, `dig-runtime` owns the
# in-process FFI path — dispatch is `handle_rpc`, which is transport-agnostic). The
# integration/unit tests still spawn small in-process axum mock servers (the §21 remote
# + a module server) to exercise the fetch/cache path hermetically.
axum = "0.7"
# In-process loopback mTLS peer drives the peer-network tests with NO real network (the CA-signed
# `dig_tls::NodeCert` minted by `load_or_generate_node_cert` is the test client's mTLS identity).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "time", "test-util"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
# The peer_network.rs integration test implements PeerRpcResponder (an async trait).
async-trait = "0.1"
